# eko-bot

./: .gitignore  README.md  bot.py  pyproject.toml
context_data/data/: data.txt
